# amber

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  example_config.toml  explain.txt  sign.sh
canonical_timestamp/: canonical_tag.txt
editable_templates/: corpus_description.txt  corpus_motivation.txt
fixed_templates/: explain_template.txt  merkle_template.txt  proof_template.txt
src/: explain_template.txt  main.rs  merkle.rs  merkle_template.txt  proof_template.txt  sign.sh  static_piece1.txt  static_piece2.txt  tag.rs  tests.rs  unfinished_merkle_template.txt  verify.rs
templates/: explain_template.txt  merkle_template.txt  user_description.txt
testing/: altered_textfile.txt  dummy_explain.txt  pg996.txt  pg996_altered_copy.txt  pg996_proof.txt
testing/reference_timestamp/: incorrect_explain.txt
testing/small_corpus/: ignore.txt  pg1.txt  pg2.txt  pg3.txt  pg4.txt  pg5.txt  pg6.txt  pg7.txt  pg8.txt  pg9.txt
testing/small_corpus/another_subdirectory/: example_doc.docx
