[package]
name = "merkle"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bitcoin = "0.32.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.23"
hex = "0.4.3"
hex-literal = "1.1.0"
hex_fmt = "0.3.0"
hybrid-array = "0.4.12"
reqwest = { version = "0.13.4", features = ["blocking"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
text-template = "0.1.0"
walkdir = "2.5.0"
